tests/baselines/reference/newMap.errors.txt
tests/cases/compiler/newMap.ts(1,9): error TS2740: No overload expects 1 type argument(s), but overloads do exist that expect either 0 or 2 type argument(s).


==== tests/cases/compiler/newMap.ts (1 errors) ====
    new Map<string>();
            ~~~~~~
!!! error TS2740: No overload expects 1 type argument(s), but overloads do exist that expect either 0 or 2 type argument(s).
    